--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         </ul>
       </li>
     </ul>
-    <h2><script src="js/01.js"></script></h2>
+    <ul id="ingredients"></ul>
+    <!-- <h2><script src="js/01.js"></script></h2> -->
+    <h2><script src="js/02.js"></script></h2>
   </body>
 </html>
