--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>JavaScript is fun!</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
@@ -36,7 +37,9 @@
       </li>
     </ul>
     <ul id="ingredients"></ul>
+    <ul class="gallery"></ul>
     <!-- <h2><script src="js/01.js"></script></h2> -->
-    <h2><script src="js/02.js"></script></h2>
+    <!--<h2><script src="js/02.js"></script></h2>-->
+    <h2><script src="js/03.js"></script></h2>
   </body>
 </html>
