--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-< !DOCTYPE html >
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -38,8 +38,14 @@
     </ul>
     <ul id="ingredients"></ul>
     <ul class="gallery"></ul>
-    <!-- <h2><script src="js/01.js"></script></h2> -->
-    <!--<h2><script src="js/02.js"></script></h2>-->
+    <div id="counter">
+      <button type="button" data-action="decrement">-1</button>
+      <span id="value">0</span>
+      <button type="button" data-action="increment">+1</button>
+    </div>
+    <h2><script src="js/01.js"></script></h2>
+    <h2><script src="js/02.js"></script></h2>
     <h2><script src="js/03.js"></script></h2>
+    <h2><script src="js/04.js"></script></h2>
   </body>
 </html>
