--- a/index.html
+++ b/index.html
@@ -43,9 +43,12 @@
       <span id="value">0</span>
       <button type="button" data-action="increment">+1</button>
     </div>
-    <h2><script src="js/01.js"></script></h2>
+    <input type="text" id="name-input" placeholder="Please enter your name" />
+    <h1>Hello, <span id="name-output">Anonymous</span>!</h1>
+    <!--<h2><script src="js/01.js"></script></h2>
     <h2><script src="js/02.js"></script></h2>
     <h2><script src="js/03.js"></script></h2>
-    <h2><script src="js/04.js"></script></h2>
+    <h2><script src="js/04.js"></script></h2>-->
+    <h2><script src="js/05.js"></script></h2>
   </body>
 </html>
