--- a/index.html
+++ b/index.html
@@ -1,54 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <title>JavaScript is fun!</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Homework 6</title>
+    <link rel="stylesheet" href="css/common.css" />
   </head>
-
   <body>
-    <ul id="categories">
-      <li class="item">
-        <h2>Animals</h2>
-        <ul>
-          <li>Cat</li>
-          <li>Hamster</li>
-          <li>Horse</li>
-          <li>Parrot</li>
-        </ul>
-      </li>
-      <li class="item">
-        <h2>Products</h2>
-        <ul>
-          <li>Bread</li>
-          <li>Prasley</li>
-          <li>Cheese</li>
-        </ul>
-      </li>
-      <li class="item">
-        <h2>Technologies</h2>
-        <ul>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>React</li>
-          <li>Node.js</li>
-        </ul>
-      </li>
+    <ul>
+      <li><a href="task-01.html">Task 1</a></li>
+      <li><a href="task-02.html">Task 2</a></li>
+      <li><a href="task-03.html">Task 3</a></li>
+      <li><a href="task-04.html">Task 4</a></li>
+      <li><a href="task-05.html">Task 5</a></li>
+      <li><a href="task-06.html">Task 6</a></li>
+      <li><a href="task-07.html">Task 7</a></li>
+      <li><a href="task-08.html">Task 8</a></li>
+      <li><a href="task-09.html">Task 9</a></li>
+      <li><a href="task-10.html">Task 10 (optional)</a></li>
     </ul>
-    <ul id="ingredients"></ul>
-    <ul class="gallery"></ul>
-    <div id="counter">
-      <button type="button" data-action="decrement">-1</button>
-      <span id="value">0</span>
-      <button type="button" data-action="increment">+1</button>
-    </div>
-    <input type="text" id="name-input" placeholder="Please enter your name" />
-    <h1>Hello, <span id="name-output">Anonymous</span>!</h1>
-    <!--<h2><script src="js/01.js"></script></h2>
-    <h2><script src="js/02.js"></script></h2>
-    <h2><script src="js/03.js"></script></h2>
-    <h2><script src="js/04.js"></script></h2>-->
-    <h2><script src="js/05.js"></script></h2>
   </body>
 </html>
